[tool.poetry]
name = "impacket"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = ">= 75.1.0"
charset_normalizer = ">=3.3.0"
future = "^0.18.3"
six = "^1.16.0"
charset-normalizer = "^3.1.0"
pyasn1 = ">=0.2.3"
pyasn1_modules = ">=0.4.1"
pycryptodomex = "^3.17"
pyOpenSSL = "24.0.0"
ldap3 = ">=2.5,!=2.5.2,!=2.5.0,!=2.6"
ldapdomaindump = ">=0.9.0"
Flask = ">=1.0"
dsinternals = "^1.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
